Add box framework for body and format footer

--- a/index.html
+++ b/index.html
@@ -44,26 +44,28 @@
         <p class="about"><a href="">About</a></p>
         <p class="data"><a href="">Data Sets</a></p>
         <p class="resources"><a href="">Resources</a></p>
-        <p class="contact"><a href="">Contact</a></p>
+        <p id="contact"><a href="">Contact</a></p>
       </article>
       <div class="stock-image2 main-box">
         <img src="images/heat-map.jpg" alt="">
       </div>
       <article class="evaluation-box main-box">
-        <p>Evaluation of the NSRDB</p>
-        <img src="" alt=""><a href="">NSRDB Viewer</a>
+        <h3>Evaluation of the NSRDB</h3>
+        <div class="evaluation-box__text">
+          <p>This new report evaluates the NSRDB data, particularly the new approach and expanded data.</p>
+          <a href="">Click to Download</a>
+        </div>
+        <a href=""><img src="images/2017_nsrdb_eval_report.png" alt=""></a>
       </article>
     </main>
     <footer class="disclaimer" role="contentInfo">
       <p class="disclaimer__NREL-disclaimer">NREL is a national laboratory of the <a href="">U.S. Department of Energy,</a> <a href="">Office of Energy Efficiency and Renewable Energy,</a> operated by the <a href="">Alliance for Sustainable Energy, LLC</a></p>
-      <nav>
-        <ul>
-          <a  class="disclaimer__links" href=""><li>Need Help?</li></a>
-          <a  class="disclaimer__links" href=""><li>Security & Privacy</li></a>
-          <a  class="disclaimer__links" href=""><li>Disclaimer</li></a>
-          <a  class="disclaimer__links" href=""><li>NREL Home</li></a>
-        </ul>
-      </nav>
+      <ul>
+        <a  class="disclaimer__links" href=""><li>Need Help? |</li></a>
+        <a  class="disclaimer__links" href=""><li> Security & Privacy |</li></a>
+        <a  class="disclaimer__links" href=""><li> Disclaimer |</li></a>
+        <a  class="disclaimer__links" href=""><li> NREL Home</li></a>
+      </ul>
     </footer>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="downloads/jquery-3.2.1.min.js"><\/script>')</script>
