Restart html framework

--- a/index.html
+++ b/index.html
@@ -10,53 +10,20 @@
   </head>
   <body>
     <header role="banner" class="header">
-<!--       <div class="header-image"> -->
-      <nav class="header__nav-bar" role="navigation">
-        <input class="header__nav__search" placeholder="Search" aria-labelledby="search-bar" type="search" results="5" ></input>
-        <div role="button" class="header__nav-bar__showHamburger header__nav-bar__button"></div>
-        <div role="button" class="header__nav-bar__exitHamburger header__nav-bar__button"></div>
-      </nav>
-      <div class="header__hamburger"> 
-        <ul class="header__hamburger__list"> 
-          <a href="https://nsrdb.nrel.gov/"><li class ="header__hamburger__list__item">Home</li></a>
-          <a href="https://nsrdb.nrel.gov/about"><li class ="header__hamburger__list__item">About</li></a>
-          <a href="https://nsrdb.nrel.gov/data-sets"><li class ="header__hamburger__list__item">Data Sets</li></a>
-          <a href="https://nsrdb.nrel.gov/resources"><li class ="header__hamburger__list__item">Resources</li></a>
-          <a href="https://nsrdb.nrel.gov/contact"><li class ="header__hamburger__list__item">Contact</li></a>
-        </ul> 
+      <h2>NATIONAL SOLAR RADIATION DATABASE</h2>
+      <ul class="header__nav">
+        <li><a href="https://nsrdb.nrel.gov/about">About</a></li>
+        <li><a href="https://nsrdb.nrel.gov/data-sets">Data Sets</a></li>
+        <li><a href="https://nsrdb.nrel.gov/resources"></a>Resources</li>
+        <li><a href="https://nsrdb.nrel.gov/contact"></a>Contact</li>
+      </ul>
+      <div class="header__search">
+        <input type="text" class="header__search__input">
+        <button></button>
       </div>
-        <h1>NSRDB</h1>
-        <h2>National Solar Radiation Database</h2>
-<!--       </div> -->
     </header>
-    <section class="landing-description">
-      <h3>Advancing the Science of Solar Data</h3>
-      <p>The National Solar Radiation Database (NSRDB) is a serially complete collection of meteorological and solar irradiance data sets for the United States and a growing list of international locations. The data are publicly available at no cost to the user. The NSRDB provides foundational information to support U.S. Department of Energy programs, research, and the general public. Comparable products are also available from commercial vendors.</p>
-    </section>
     <main role="main">
-      <div class="stock-image main-box" >
-        <img src="images/heat-map.jpg" alt="">
-      </div>
-      <article class="description2 main-box">
-        <p>Supported by the U.S. Department of Energy’s <a href="">SunShot Initiative,</a> the NSRDB is a widely used and relied-upon resource. The database is managed and updated using the latest methods of research by a specialized team of forecasters at the National Renewable Energy Laboratory (NREL).</p>
-      </article>
-      <article class="section-link-box main-box">
-        <p class="about"><a href="">About</a></p>
-        <p class="data"><a href="">Data Sets</a></p>
-        <p class="resources"><a href="">Resources</a></p>
-        <p id="contact"><a href="">Contact</a></p>
-      </article>
-      <div class="stock-image2 main-box">
-        <img src="images/heat-map.jpg" alt="">
-      </div>
-      <article class="evaluation-box main-box">
-        <h3>Evaluation of the NSRDB</h3>
-        <div class="evaluation-box__text">
-          <p>This new report evaluates the NSRDB data, particularly the new approach and expanded data.</p>
-          <a href="">Click to Download</a>
-        </div>
-        <a href=""><img src="images/2017_nsrdb_eval_report.png" alt=""></a>
-      </article>
+      <h2></h2>
     </main>
     <footer class="disclaimer" role="contentInfo">
       <p class="disclaimer__NREL-disclaimer">NREL is a national laboratory of the <a href="">U.S. Department of Energy,</a> <a href="">Office of Energy Efficiency and Renewable Energy,</a> operated by the <a href="">Alliance for Sustainable Energy, LLC</a></p>
@@ -73,4 +40,3 @@
   </body>
 </html>
 
-<!-- menu icon <div>Icons made by <a href="https://www.flaticon.com/authors/eleonor-wang" title="Eleonor Wang">Eleonor Wang</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
