--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <header role="banner" class="header">
       <h2>NATIONAL SOLAR RADIATION DATABASE</h2>
       <ul class="header__nav">
-        <li><a href="https://nsrdb.nrel.gov/about">About</a></li>
-        <li><a href="https://nsrdb.nrel.gov/data-sets">Data Sets</a></li>
+        <li><a href="https://nsrdb.nrel.gov/about">About</a></li> <li><a href="https://nsrdb.nrel.gov/data-sets">Data Sets</a></li>
         <li><a href="https://nsrdb.nrel.gov/resources"></a>Resources</li>
         <li><a href="https://nsrdb.nrel.gov/contact"></a>Contact</li>
       </ul>
