Add data-set section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>NSRDB</title>
     <link rel="stylesheet" href="normalize/normalize.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/home-main.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
@@ -31,10 +31,24 @@
         </ul>
       </section>
       <section class="main__collage">
-        <img class="main__collage__image main-image1" src="./images/solar-panel.jpeg" alt="">
-        <img class="main__collage__image main-image2" src="./images/solar-flare.jpeg" alt="">
+        <img class="main__collage__image main-image1" src="./images/solar-flare.jpeg" alt="">
+        <img class="main__collage__image main-image2" src="./images/solar-panel.jpeg" alt="">
         <img class="main__collage__image main-image3" src="./images/wind-energy.jpeg" alt="">
         <img class="main__collage__image main-image4" src="./images/nyc-night.jpg" alt="">
+      </section>
+      <section class="main__what-is">
+        <h3>WHAT IS THE NSRDB?</h3>
+        <p>The National Solar Radiation Database (NSRDB) is a serially complete collection of meteorological and solar irradiance data sets for the United States and a growing list of international locations. The data are publicly available at no cost to the user. The NSRDB provides foundational information to support U.S. Department of Energy programs, research, and the general public. Comparable products are also available from commercial vendors.</p>
+      </section>
+      <section class="main__data-set">
+        <h3>DATA SETS </h3>
+        <img class="main__data-set__image" src="./images/data-set-1.png" alt="">
+        <img class="main__data-set__image" src="./images/data-set-3.png" alt="">
+        <img class="main__data-set__image" src="./images/data-set-2.png" alt="">
+      </section>
+      <section class="main__sunshot">
+        <h3>Sunshot Initiative</h3>
+        <p>Supported by the U.S. Department of Energy’s <a href="https://energy.gov/eere/solar/solar-energy-technologies-office">SunShot Initiative,</a> the NSRDB is a widely used and relied-upon resource. The database is managed and updated using the latest methods of research by a specialized team of forecasters at the National Renewable Energy Laboratory (NREL).</p>
       </section>
     </main>
 
