Add responsive layout from full page to tablet

--- a/index.html
+++ b/index.html
@@ -25,39 +25,58 @@
       <section class="main__subtitle">
         <h3>ADVANCING THE SCIENCE OF SOLAR DATA</h3>
         <ul>
-          <li><a class="main__subtitle__link" href="">What is NSRDB?</a></li>
-          <li><a class="main__subtitle__link" href="">Sunshot Initiative</a></li>
-          <li><a class="main__subtitle__link" href="">Evaluation</a></li>
+          <li><a class="main__subtitle__link" href="#whatis">What is NSRDB?</a></li>
+          <li><a class="main__subtitle__link" href="#sunshot">Sunshot Initiative</a></li>
+          <li><a class="main__subtitle__link" href="#evaluation">Evaluation</a></li>
         </ul>
       </section>
       <section class="main__collage">
-        <img class="main__collage__image main-image1" src="./images/solar-flare.jpeg" alt="">
+        <img class="main__collage__image main-image1" src="./images/nasa-orb.jpg" alt="">
         <img class="main__collage__image main-image2" src="./images/solar-panel.jpeg" alt="">
         <img class="main__collage__image main-image3" src="./images/wind-energy.jpeg" alt="">
         <img class="main__collage__image main-image4" src="./images/nyc-night.jpg" alt="">
       </section>
-      <section class="main__what-is">
+      <section class="main__what-is" id="whatis">
         <h3>WHAT IS THE NSRDB?</h3>
-        <p>The National Solar Radiation Database (NSRDB) is a serially complete collection of meteorological and solar irradiance data sets for the United States and a growing list of international locations. The data are publicly available at no cost to the user. The NSRDB provides foundational information to support U.S. Department of Energy programs, research, and the general public. Comparable products are also available from commercial vendors.</p>
+        <p>
+          The National Solar Radiation Database (NSRDB) is a serially complete collection of meteorological and solar irradiance data sets for the United States and a growing list of international locations. The data are publicly available at no cost to the user. The NSRDB provides foundational information to support U.S. Department of Energy programs, research, and the general public. Comparable products are also available from commercial vendors.
+        </p>
       </section>
-      <section class="main__data-set">
+<!--       <section class="main__data-set">
         <h3>DATA SETS </h3>
         <img class="main__data-set__image" src="./images/data-set-1.png" alt="">
         <img class="main__data-set__image" src="./images/data-set-3.png" alt="">
         <img class="main__data-set__image" src="./images/data-set-2.png" alt="">
+      </section> -->
+      <section class="main__sunshot" id="sunshot">
+        <h3>SUNSHOT INITIATIVE</h3>
+        <p>
+          Supported by the U.S. Department of Energy’s <a href="https://energy.gov/eere/solar/solar-energy-technologies-office">SunShot Initiative,</a> the NSRDB is a widely used and relied-upon resource. The database is managed and updated using the latest methods of research by a specialized team of forecasters at the National Renewable Energy Laboratory (NREL).
+        </p>
       </section>
-      <section class="main__sunshot">
-        <h3>Sunshot Initiative</h3>
-        <p>Supported by the U.S. Department of Energy’s <a href="https://energy.gov/eere/solar/solar-energy-technologies-office">SunShot Initiative,</a> the NSRDB is a widely used and relied-upon resource. The database is managed and updated using the latest methods of research by a specialized team of forecasters at the National Renewable Energy Laboratory (NREL).</p>
+      <section class="main__evaluation" id="evaluation">
+        <h3>EVALUATION OF THE NSRDB</h3>
+        <p>This new report evaluates the NSRDB data, particularly the new approach and expanded data.</p>
+        <p><a href="http://www.nrel.gov/docs/fy17osti/67722.pdf" target="_blank">Click to download</a></p>
+      </section>
+      <section class="main__image-row">
+        <img src="./images/wind-energy.jpeg" alt="" class="main__image-row__image">
+        <img src="./images/earth-night.jpeg" alt="" class="main__image-row__image">
+        <img src="./images/nasa-orb.jpg" alt="" class="main__image-row__image">
+        <img src="./images/solar-panel.jpeg" alt="" class="main__image-row__image">
+        <img src="./images/nyc-night.jpg" alt="" class="main__image-row__image">
+        <img src="./images/panels.jpg" alt="" class="main__image-row__image">
       </section>
     </main>
     <footer class="disclaimer" role="contentInfo">
-      <p class="disclaimer__NREL-disclaimer">NREL is a national laboratory of the <a href="">U.S. Department of Energy,</a> <a href="">Office of Energy Efficiency and Renewable Energy,</a> operated by the <a href="">Alliance for Sustainable Energy, LLC</a></p>
+      <p class="disclaimer__NREL-disclaimer">
+        NREL is a national laboratory of the <a href="http://energy.gov/" target="_blank">U.S. Department of Energy,</a> <a href="http://energy.gov/eere/office-energy-efficiency-renewable-energy" target="_blank">Office of Energy Efficiency and Renewable Energy,</a> operated by the <a href="http://www.allianceforsustainableenergy.org/" target="_blank">Alliance for Sustainable Energy, LLC</a>
+      </p>
       <ul>
-        <a  class="disclaimer__links" href=""><li>Need Help? |</li></a>
-        <a  class="disclaimer__links" href=""><li> Security & Privacy |</li></a>
-        <a  class="disclaimer__links" href=""><li> Disclaimer |</li></a>
-        <a  class="disclaimer__links" href=""><li> NREL Home</li></a>
+        <li><a  class="disclaimer__links" href="https://nsrdb.nrel.gov/contact">Need Help? |</a></li>
+        <li><a  class="disclaimer__links" href="http://www.nrel.gov/security.html"> Security & Privacy |</a></li>
+        <li><a  class="disclaimer__links" href="http://www.nrel.gov/disclaimer.html"> Disclaimer |</a></li>
+        <li><a  class="disclaimer__links" href="http://www.nrel.gov/"> NREL Home</a></li>
       </ul>
     </footer>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
