Add read more buttons for mobile

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
       <section class="main__what-is" id="whatis">
         <h3>WHAT IS THE NSRDB?</h3>
         <p>
-          The National Solar Radiation Database (NSRDB) is a serially complete collection of meteorological and solar irradiance data sets for the United States and a growing list of international locations. The data are publicly available at no cost to the user. The NSRDB provides foundational information to support U.S. Department of Energy programs, research, and the general public. Comparable products are also available from commercial vendors.
+          The National Solar Radiation Database (NSRDB) is a serially complete collection of meteorological and solar irradiance data sets for the United States and a growing list of international locations. The data are publicly available at no cost to the user. <span id="read-more-text__what-is">The NSRDB provides foundational information to support U.S. Department of Energy programs, research, and the general public. Comparable products are also available from commercial vendors.</span>
         </p>
+        <button class="main__button" id="what-is__toggle">Read More</button>
       </section>
 <!--       <section class="main__data-set">
         <h3>DATA SETS </h3>
@@ -51,8 +52,9 @@
       <section class="main__sunshot" id="sunshot">
         <h3>SUNSHOT INITIATIVE</h3>
         <p>
-          Supported by the U.S. Department of Energy’s <a href="https://energy.gov/eere/solar/solar-energy-technologies-office">SunShot Initiative,</a> the NSRDB is a widely used and relied-upon resource. The database is managed and updated using the latest methods of research by a specialized team of forecasters at the National Renewable Energy Laboratory (NREL).
+          Supported by the U.S. Department of Energy’s <a href="https://energy.gov/eere/solar/solar-energy-technologies-office">SunShot Initiative,</a> the NSRDB is a widely used and relied-upon resource. <span id="read-more-text__sunshot">The database is managed and updated using the latest methods of research by a specialized team of forecasters at the National Renewable Energy Laboratory (NREL).</span>
         </p>
+        <button class="main__button" id="sunshot__toggle">Read More</button>
       </section>
       <section class="main__evaluation" id="evaluation">
         <h3>EVALUATION OF THE NSRDB</h3>
