Add reformatting for paragraph letter spacing

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <section class="main__sunshot" id="sunshot">
         <h3>SUNSHOT INITIATIVE</h3>
         <p>
-          Supported by the U.S. Department of Energy’s <a href="https://energy.gov/eere/solar/solar-energy-technologies-office">SunShot Initiative,</a> the NSRDB is a widely used and relied-upon resource. <span id="read-more-text__sunshot">The database is managed and updated using the latest methods of research by a specialized team of forecasters at the National Renewable Energy Laboratory (NREL).</span>
+          Supported by the U.S. Department of Energy’s <a href="https://energy.gov/eere/solar/solar-energy-technologies-office" target="_blank">SunShot Initiative,</a> the NSRDB is a widely used and relied-upon resource. <span id="read-more-text__sunshot">The database is managed and updated using the latest methods of research by a specialized team of forecasters at the National Renewable Energy Laboratory (NREL).</span>
         </p>
         <button class="main__button" id="sunshot__toggle">Read More</button>
       </section>
